--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ div.space {
 }
 
 .inky {
-  background: url('https://static.wikia.nocookie.net/wreckitralph/images/8/83/Inky8bit.png/revision/latest?cb=20130625170116');
+  background: url('https://t5.rbxcdn.com/00065af65995f03020021ea2530e7eba');
   background-size: 120%;
   background-repeat: no-repeat;
   background-position: center;
@@ -153,7 +153,7 @@ div.space {
 }
 
 .glow-ghosts {
-  background: url('https://static.wikia.nocookie.net/pacman/images/5/56/Vulnerable-ghost.png/revision/latest?cb=20181106204925');
+  background: url('https://i.pinimg.com/474x/e8/84/ab/e884ab951085a6105c6fc91714b8933b.jpg');
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
