--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ div.maze {
 /* PACMAN CSS */
 
 .pacman, .pacmanglows {
-  background: url('https://upload.wikimedia.org/wikipedia/en/thumb/e/e4/Original_PacMan2.png/170px-Original_PacMan2.png');
+  background: url('./assets/pacman.png');
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
@@ -121,7 +121,7 @@ div.space {
 /* GHOSTS */
 
 .blinky {
-  background: url('./assets/pacman.png');
+  background: url('./assets/blinky.png');
   background-size: 130%;
   background-repeat: no-repeat;
   background-position: center;
@@ -175,7 +175,7 @@ div.lives {
   display: inline-block;
   height: 25px;
   width: 25px;
-  background: url('https://upload.wikimedia.org/wikipedia/en/thumb/e/e4/Original_PacMan2.png/170px-Original_PacMan2.png');
+  background: url('./assets/pacman.png');
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center;
